# FitLog

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  INTEGRATION_REPORT.md  QUICK_START.md  README.md  RESTRUCTURING_GUIDE.md  SUBMISSION.md  compose.yaml  docker-compose.yml  fitlog.http  pyproject.toml  railway.toml  render.yaml  test_user_scoping.py
.streamlit/: config.toml  secrets.toml
alembic/: env.py
alembic/versions/: 465e559af203_baseline.py
app/: __init__.py  cache.py  config.py  database.py  db.py  exceptions.py  main.py  models.py  repository.py  security.py  tasks.py
app/routers/: ai_assistant.py  analytics.py  auth.py  body_metrics.py  exercises.py  hydration.py  macros.py  profile.py  recovery.py  sleep.py  steps.py  workout_logs.py
docs/: EX3-notes.md  SETTINGS-GUIDE.md  SETTINGS-WALKTHROUGH.md
docs/runbooks/: compose.md
frontend/: README.md  _ai_fab.py  app.py  streamlit_app.py
frontend/.streamlit/: secrets.toml
openspec/changes/architecture-improvements/: .openspec.yaml  proposal.md  tasks.md
openspec/changes/code-review-fixes/: design.md  proposal.md  tasks.md
openspec/changes/health-wellness-ui-overhaul/: design.md  proposal.md  tasks.md
openspec/changes/performance-improvements/: .openspec.yaml  proposal.md
openspec/changes/project-cleanup/: design.md  proposal.md  tasks.md
openspec/changes/ui-redesign/: design.md  (+2 more)
scripts/: demo.py  demo.sh  refresh.py  seed.py
src/: __init__.py
src/app/: __init__.py  main.py  repository.py
tests/: conftest.py  test_ai_assistant.py  test_analytics.py  test_auth_security.py  test_body_metrics.py  test_exercises.py  test_hydration.py  test_macros.py  test_profile.py  test_recovery.py  test_refresh.py  test_sleep.py  test_type_conversions.py  test_workout_logs.py
tests/api/: __init__.py
(+40 files in other folders)
